SKI-224 work on coverage reports